# 2022_KBUB

./: .gitignore  README.md
control_to_serial/: CMakeLists.txt
control_to_serial/map/: 3.txt  3공2.txt  3공3.txt  Uturn.txt  k-city2 backup.txt  k-city2.txt  k-city_direct.txt  k-city_direct_good (사본).txt  k-city_direct_good.txt  k-city_hdmap.txt  stop_Uturn.txt  test2.txt  나래돔_9000.txt  나래돔_주차.txt  나래돔_주차_2.txt  나래돔_주차_연동.txt  산학3.txt  산학_제어_로컬_라이다.txt  산학앞.txt  산학앞2.txt  산학앞6500.txt
control_to_serial/src/: Serial (사본).cpp  Serial(L_stop).cpp  Serial.cpp  Serial_lidar.cpp  Serial_parkenc.cpp  Track.cpp  delta_plot.py  encoder.py  newSerial.cpp  plotter.py  plotter_backup.py  stanley.cpp
control_to_serial/src/encoder/: encoder(나래돔 실험용).py  encoder(비전연결).py  encoder(정리+확인필요).py  encoder(플래닝 연결).py  encoder_old.py  encoder_park.py  encoder_steer.py
control_to_serial/src/serial/: Serial(0909).cpp  Serial(9.5백업).cpp  Serial(9월 16일).cpp  Serial(R).cpp  Serial(안돼지).cpp  Serial2.cpp  Serial_stopline.cpp
control_to_serial/src/sick/: seek.py  seek_many.py  sick.py
control_to_serial/src/stanley/: stanley (0910)+kjh.cpp  stanley(0909).cpp  stanley(2020).py  stanley(8월 16일).cpp  stanley(9.5백업).cpp  stanley(9월 16일).cpp  stanley(R).cpp  stanley(스탠리 잘돼지).cpp  stanley(안돼지).cpp  stanley(야매).cpp
kbub_pkg/: CMakeLists.txt  package.xml
kbub_pkg/launch/: run_all.launch
kbub_pkg/msg/: Object.msg  ObjectArray.msg  msgVelodyne.msg
kbub_pkg/src/: CameraInput.cpp  CarController.cpp  Driver.cpp  GCS.cpp  GlobalPathManager.cpp  InputManager.cpp  LidarInput.cpp  LocalInput.cpp  Position.cpp  StateArbiter.cpp  coord.cpp  kbub(9월 4일).cpp  kbub.cpp  plan.cpp  sub_test.cpp  test1.txt
kbub_pkg/src/0925통합주행/: 1.txt  11.txt  5.txt  6.txt  7.txt  8.txt  97.txt
kbub_pkg/src/2공 주차/: 1.txt  2.txt  3.txt
kbub_pkg/src/K1/: 12.txt  13.txt  14.txt  20.txt  23.txt  5.txt  7.txt  9.txt
kbub_pkg/src/bus1/: 1.txt
kbub_pkg/src/gcs/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
kbub_pkg/src/k_factory parking/: 1.txt  2.txt  3.txt
kbub_pkg/src/kcity주차/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
kbub_pkg/src/mac_delivery/: 1.txt  2.txt  3.txt  4.txt  97.txt  98.txt
kbub_pkg/src/map/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  20.txt  21.txt  22.txt  25.txt  27.txt  28.txt  3.txt  30.txt  33.txt  4.txt  5.txt  7.txt  9.txt  99.txt
kbub_pkg/src/map_recent_backup/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  99.txt
kbub_pkg/src/narae_/: 2.txt
kbub_pkg/src/p1/: 3.txt
kbub_pkg/src/r4/: 2.txt  3.txt  4.txt  6.txt
kbub_pkg/src/temp_map/: 5.txt  6.txt  7.txt
kbub_pkg/src/tkseks1/: 1.txt  11.txt  5.txt  7.txt
kbub_pkg/src/산학/: 1.txt
kbub_pkg/src/산학 리버스/: 1.txt
kbub_pkg/src/산학 앞 배달/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  97.txt  98.txt
kbub_pkg/src/산학 앞 직진/: 1.txt  2.txt
kbub_pkg/src/산학앞 좌회전/: 1.txt
kbub_pkg/src/캠퍼스컴퍼니 주차/: 1.txt  2.txt  3.txt  4.txt
nmea_navsat_driver/launch/: nmea_serial_driver.launch
nmea_navsat_driver/src/libnmea_navsat_driver/: driver.py
nmea_vtg_reader/: CMakeLists.txt  package.xml
nmea_vtg_reader/launch/: nmea_vtg_reader.launch
nmea_vtg_reader/msg/: gps_heading.msg  vel_msg.msg
nmea_vtg_reader/src/: VTG_reader.cpp  heading_using_vector (사본).cpp  heading_using_vector.cpp  heading_using_vector_backup.cpp  kalman_orientation_reader.py  vtg_reader.py
obj_detecting/: CMakeLists.txt  package.xml
obj_detecting/launch/: obj_detecting.launch
obj_detecting/src/: obj_detecting (사본).cpp  obj_detecting.cpp
parking/: CMakeLists.txt  package.xml
parking/launch/: parking.launch
parking/src/: parking (사본).cpp  parking.cpp  parking_8.2.cpp  parking_9.26.cpp
parking_level3/: CMakeLists.txt  package.xml
parking_level3/src/: camera_test.cpp  parking_level3.cpp  parking_level3_rosX.cpp
parking_level4/: CMakeLists.txt  package.xml
parking_level4/src/: parking_level4.cpp
razor_imu_9dof/config/: my_razor.yaml
razor_imu_9dof/launch/: razor-pub.launch
razor_imu_9dof/msg/: yaw_msg.msg
razor_imu_9dof/nodes/: imu_node.py  imu_node_origin.py
razor_imu_9dof/nodes/0901/: imu_node (사본).py
stop_line/: CMakeLists.txt  package.xml
stop_line/src/: stop.cpp
stopline_2021/: CMakeLists.txt  package.xml
stopline_2021/launch/: stopline_2021.launch
stopline_2021/rviz/: stopline_2021.rviz
stopline_2021/src/: stop_line(작년꺼).cpp  stopline_2021 (사본).cpp  stopline_2021.cpp  stopline_2021_9.26.cpp  stopline_2021_final.cpp  stopline_2021_final_fake (사본).cpp  stopline_2021_final_fake.cpp  stopline_2021_frontcam1.cpp  stopline_2021_new.cpp  stopline_2021_sub.cpp  stopline_2021_사본.cpp
txt_saver/: CMakeLists.txt  package.xml
txt_saver/98/: 98.txt
txt_saver/bag/: 2021-07-21-16-53-32.bag  2021-07-21-16-55-11.bag
txt_saver/c/: 1.txt
txt_saver/launch/: txt_saver.launch
txt_saver/map/: 1.txt
txt_saver/paths/0926본선_raw/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  32.txt  33.txt  34.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
txt_saver/paths/0926본선_smoothing/: 12.txt  13.txt  16.txt  17.txt  19.txt  2.txt  23.txt  24.txt  26.txt  29.txt  3.txt  31.txt  32.txt  34.txt  6.txt  8.txt  98.txt
txt_saver/paths/210807/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
txt_saver/paths/2공 주차/: 1.txt  2.txt
txt_saver/paths/industrial_front/: 1.txt  2.txt  3.txt  4.txt  5.txt
txt_saver/paths/narae/: 1.txt  2.txt
txt_saver/paths/narae2/: 1.txt  2.txt  3.txt  4.txt
txt_saver/paths/나래돔 미션 path/: 1.txt  3.txt  4.txt
txt_saver/paths/본선/: 1.txt  10.txt  11.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  21.txt  22.txt  3.txt  4.txt  6.txt  8.txt
txt_saver/paths/산학 앞 제어/: 1.txt
txt_saver/paths/산학 앞 제어 리버스/: 1.txt
txt_saver/paths/산학_정적대형/: 1.txt  2.txt  99.txt
txt_saver/recent_backup/: 1.txt
txt_saver/src/: dec_paths.py  path_smoothing.py  pure.py  stanley.py  stanley_control.py  txt_saver.py
(+26 files in other folders)
